# personal-ai-agent

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
app/: config.py  main.py
app/agents/: base.py  orchestrator.py
app/agents/prebuilt/: summarizer.py
app/api/: deps.py
app/api/v1/: agents.py  router.py  threads.py  tools.py
app/core/: container.py  events.py  exceptions.py  logger.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: cf57ebf01f4f_create_threads_messages_runs.py
app/docker/: Dockerfile
app/llm/: base.py  client.py  factory.py
app/llm/prompts/: system.py
app/llm/providers/: openai_provider.py
app/memory/: base.py  short_term.py
app/models/: message.py  run.py  thread.py
app/schemas/: agent.py  message.py  thread.py
app/services/: agent_service.py  run_service.py  thread_service.py
app/tools/: base.py  pdf_reader.py  registry.py  url_scraper.py
