[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freddy"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.133.0",
  "uvicorn[standard]>=0.41.0",
  "openai>=2.23.0",
  "httpx>=0.28.1",
  "beautifulsoup4>=4.14.3",
  "pymupdf>=1.27.1",
  "sqlalchemy[asyncio]>=2.0.46",
  "asyncpg>=0.31.0",
  "alembic>=1.18.4",
  "pydantic-settings>=2.13.1",
  "python-multipart>=0.0.22",
  "python-json-logger>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "httpx>=0.28.1",
  "ruff>=0.15.2",
  "pyright>=1.1.408",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"